--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "creative-technologist-portfolio",
+  "name": "anto-bredly-|-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "react-dom": "^19.2.4",
-    "recharts": "^3.7.0",
+    "react": "^19.2.4",
     "@google/genai": "^1.39.0",
-    "d3": "^7.9.0",
-    "react": "^19.2.4"
+    "recharts": "^3.7.0",
+    "d3": "^7.9.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
